vpc.tf
# tfsec:ignore:aws-ec2-require-vpc-flow-logs-for-all-vpcs
resource "aws_vpc" "vpc" {
  cidr_block = local.vpc_cidr_block

  enable_dns_support   = true
  enable_dns_hostnames = true


  assign_generated_ipv6_cidr_block = var.enable_ipv6

  tags = merge(
    var.default_tags,
    {
      Name     = "${var.environment}--vpc"
      Resource = "vpc"
    }
  )
}
